--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -1,18 +1,17 @@
 localeDisplayName.en=English
 
-ru.itsyn.jmix.menu_editor/menu.application=Application
-
-ru.itsyn.jmix.menu_editor.screen.main/application.caption = Jmix Menu Editor application
-ru.itsyn.jmix.menu_editor.screen.main/application.logoLabel = Jmix Menu Editor application
+ru.itsyn.jmix.menu_editor/menu.application=cuba-menu-editor
+ru.itsyn.jmix.menu_editor.screen.main/application.caption=cuba-menu-editor
+ru.itsyn.jmix.menu_editor.screen.main/application.logoLabel=cuba-menu-editor
 
 ru.itsyn.jmix.menu_editor.screen.main/sideMenuCollapse = Collapse menu
 ru.itsyn.jmix.menu_editor.screen.main/logoutBtnDescription = Logout
 
 ru.itsyn.jmix.menu_editor.screen.login/usernamePlaceholder = User name
 ru.itsyn.jmix.menu_editor.screen.login/passwordPlaceholder = Password
-ru.itsyn.jmix.menu_editor.screen.login/welcomeLabel = Welcome to Jmix Menu Editor application
+ru.itsyn.jmix.menu_editor.screen.login/welcomeLabel = Welcome to cuba-menu-editor
 ru.itsyn.jmix.menu_editor.screen.login/loginButton = Submit
-ru.itsyn.jmix.menu_editor.screen.login/caption = Sample
+ru.itsyn.jmix.menu_editor.screen.login/caption = Login
 ru.itsyn.jmix.menu_editor.screen.login/loginFailed = Login failed
 ru.itsyn.jmix.menu_editor.screen.login/badCredentials = Unknown login name or bad password
 ru.itsyn.jmix.menu_editor.screen.login/emptyUsernameOrPassword = Please enter user name and password
@@ -28,7 +27,7 @@ ru.itsyn.jmix.menu_editor.entity/User.password = Password
 ru.itsyn.jmix.menu_editor.entity/User.email = Email
 ru.itsyn.jmix.menu_editor.entity/User.username = Username
 
-ru.itsyn.jmix.menu_editor.screen.user/UserBrowse.caption = Users
+ru.itsyn.jmix.menu_editor.screen.user/UserBrowse.caption=Users
 ru.itsyn.jmix.menu_editor.screen.user/UserEdit.caption=User editor
 ru.itsyn.jmix.menu_editor.screen.user/confirmPassword=Confirm password
 ru.itsyn.jmix.menu_editor.screen.user/passwordsDoNotMatch=Passwords do not match
