#1 - add russian translation

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -1,1 +1,34 @@
 localeDisplayName.ru=Русский
+
+ru.itsyn.jmix.menu_editor/menu.application=cuba-menu-editor
+ru.itsyn.jmix.menu_editor.screen.main/application.caption=cuba-menu-editor
+ru.itsyn.jmix.menu_editor.screen.main/application.logoLabel=cuba-menu-editor
+
+ru.itsyn.jmix.menu_editor.screen.main/sideMenuCollapse=Свернуть мееню
+ru.itsyn.jmix.menu_editor.screen.main/logoutBtnDescription=Выход
+
+ru.itsyn.jmix.menu_editor.screen.login/usernamePlaceholder=Логин
+ru.itsyn.jmix.menu_editor.screen.login/passwordPlaceholder=Пароль
+ru.itsyn.jmix.menu_editor.screen.login/welcomeLabel=Войти в систему
+ru.itsyn.jmix.menu_editor.screen.login/loginButton=Войти
+ru.itsyn.jmix.menu_editor.screen.login/caption=Логин
+ru.itsyn.jmix.menu_editor.screen.login/loginFailed=Ошибка входа
+ru.itsyn.jmix.menu_editor.screen.login/badCredentials=Некорректный логин или пароль
+ru.itsyn.jmix.menu_editor.screen.login/emptyUsernameOrPassword=Введите логин и пароль
+ru.itsyn.jmix.menu_editor.screen.login/loginScreen.rememberMe=Запомнить меня
+
+ru.itsyn.jmix.menu_editor.entity/User=Пользователь
+ru.itsyn.jmix.menu_editor.entity/User.id=ID
+ru.itsyn.jmix.menu_editor.entity/User.version=Версия
+ru.itsyn.jmix.menu_editor.entity/User.lastName=Фамилия
+ru.itsyn.jmix.menu_editor.entity/User.firstName=Имя
+ru.itsyn.jmix.menu_editor.entity/User.active=Активный
+ru.itsyn.jmix.menu_editor.entity/User.password=Пароль
+ru.itsyn.jmix.menu_editor.entity/User.email=Электронная почта
+ru.itsyn.jmix.menu_editor.entity/User.username=Полное имя
+
+ru.itsyn.jmix.menu_editor.screen.user/UserBrowse.caption=Пользователи
+ru.itsyn.jmix.menu_editor.screen.user/UserEdit.caption=Редактор пользователя
+ru.itsyn.jmix.menu_editor.screen.user/confirmPassword=Подтверждение пароля
+ru.itsyn.jmix.menu_editor.screen.user/passwordsDoNotMatch=Пароли не совпадают
+ru.itsyn.jmix.menu_editor.screen.user/additional=Дополнительно
