--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -3,7 +3,6 @@ localeDisplayName.en=English
 ru.itsyn.jmix.menu_editor/menu.application=cuba-menu-editor
 ru.itsyn.jmix.menu_editor.screen.main/application.caption=cuba-menu-editor
 ru.itsyn.jmix.menu_editor.screen.main/application.logoLabel=cuba-menu-editor
-
 ru.itsyn.jmix.menu_editor.screen.main/sideMenuCollapse = Collapse menu
 ru.itsyn.jmix.menu_editor.screen.main/logoutBtnDescription = Logout
 
@@ -32,3 +31,22 @@ ru.itsyn.jmix.menu_editor.screen.user/UserEdit.caption=User editor
 ru.itsyn.jmix.menu_editor.screen.user/confirmPassword=Confirm password
 ru.itsyn.jmix.menu_editor.screen.user/passwordsDoNotMatch=Passwords do not match
 ru.itsyn.jmix.menu_editor.screen.user/additional=Additional
+
+ru.itsyn.jmix.menu_editor.entity/MenuEntity=Menu
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.version=Version
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.name=Name
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.code=Code
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.priority=Priority
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.description=Description
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.config=Config
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdBy=Created by
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdDate=Created date
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedBy=Last modified by
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedDate=Last modified date
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedBy=Deleted by
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedDate=Deleted date
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.caption=Main menus
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.menu=Main menus
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityEditor.caption=Menu editor
+
