--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -3,7 +3,6 @@ localeDisplayName.ru=Русский
 ru.itsyn.jmix.menu_editor/menu.application=cuba-menu-editor
 ru.itsyn.jmix.menu_editor.screen.main/application.caption=cuba-menu-editor
 ru.itsyn.jmix.menu_editor.screen.main/application.logoLabel=cuba-menu-editor
-
 ru.itsyn.jmix.menu_editor.screen.main/sideMenuCollapse=Свернуть мееню
 ru.itsyn.jmix.menu_editor.screen.main/logoutBtnDescription=Выход
 
@@ -32,3 +31,21 @@ ru.itsyn.jmix.menu_editor.screen.user/UserEdit.caption=Редактор поль
 ru.itsyn.jmix.menu_editor.screen.user/confirmPassword=Подтверждение пароля
 ru.itsyn.jmix.menu_editor.screen.user/passwordsDoNotMatch=Пароли не совпадают
 ru.itsyn.jmix.menu_editor.screen.user/additional=Дополнительно
+
+ru.itsyn.jmix.menu_editor.entity/MenuEntity=Меню
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.version=Версия
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.name=Name
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.code=Код
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.priority=Приоритет
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.description=Описание
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.config=Конфигурация
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdBy=Создано пользователем
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdDate=Дата создания
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedBy=Изменено пользователем
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedDate=Дата изменения
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedBy=Удалено пользователем
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedDate=Дата удаления
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.caption=Главное меню
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.menu=Главное меню
+ru.itsyn.jmix.menu_editor.screen.menu/menuEntityEditor.caption=Редактор меню
