--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -50,3 +50,32 @@ ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.caption=Main menus
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.menu=Main menus
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityEditor.caption=Menu editor
 
+ru.itsyn.jmix.menu_editor.entity/MenuItemType.MENU=Menu
+ru.itsyn.jmix.menu_editor.entity/MenuItemType.SCREEN=Screen
+ru.itsyn.jmix.menu_editor.entity/MenuItemType.SEPARATOR=Separator
+
+ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.THIS_TAB=Current tab
+ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.NEW_TAB=New tab
+ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.DIALOG=Dialog
+
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity=Menu item
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.id=Id
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemId=Item ID
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.captionKey=Caption key
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemType=Item type
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.parent=Parent
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.screen=Screen
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.runnableClass=Screen class
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.bean=Bean
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.beanMethod=Bean method
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.resizable=Resizable
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.shortcut=Shortcut
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.description=Description
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.styleName=Style name
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.icon=Icon
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.openMode=Open mode
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.expanded=Expanded
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.children=Children
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Caption
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.openMode=Open mode
