--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -78,4 +78,5 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.expanded=Expanded
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.children=Children
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Caption
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.openMode=Open mode
+
+ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
