--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -78,3 +78,5 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.expanded=Расширенный
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.children=Вложенные пункты
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Заголовок
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Свойства
+
+ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
