#1 - MenuEntityEditor - add item drag-and-drop

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -80,3 +80,4 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Caption
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
+ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
