--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -80,3 +80,4 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Заголовок
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Свойства
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
+ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Циклическая зависимость
