--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -59,8 +59,7 @@ ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.NEW_TAB=New tab
 ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.DIALOG=Dialog
 
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity=Menu item
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.id=Id
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemId=Item ID
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.id=Item ID
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.captionKey=Caption key
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemType=Item type
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.parent=Parent
