--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -59,8 +59,7 @@ ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.NEW_TAB=Новая вкладка
 ru.itsyn.jmix.menu_editor.entity/MenuOpenMode.DIALOG=Диалог
 
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity=Пункт меню
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.id=ID
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemId=Идентификатор
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.id=Идентификатор
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.captionKey=Ключ заголовка
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.itemType=Тип пункта
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.parent=Родительский пункт
