#1 - MenuEntityEditor - add resetMenu action

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -67,7 +67,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.screen=Screen
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.runnableClass=Screen class
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.bean=Bean
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.beanMethod=Bean method
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.resizable=Resizable
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.shortcut=Shortcut
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.description=Description
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.styleName=Style name
@@ -79,4 +78,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Caption
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
+ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Reset
+ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Reset menu to default configuration?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
