--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -67,7 +67,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.screen=Экран
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.runnableClass=Класс экрана
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.bean=Компонент
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.beanMethod=Метод компонента
-ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.resizable=Изменение размера
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.shortcut=Горячая клавиша
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.description=Описание
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.styleName=Имя стиля
@@ -79,4 +78,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Заголовок
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Свойства
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
+ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Сбросить
+ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Сбросить меню в конфигурацию по умолчанию?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Циклическая зависимость
