#1 - menu-entity-browser.xml - add copy action

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -82,3 +82,4 @@ ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
 ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Reset
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Reset menu to default configuration?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
+ru.itsyn.jmix.menu_editor.screen.menu/copy=Copy
