#1 - menu-entity-browser.xml - add apply action

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -83,3 +83,4 @@ ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Reset
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Reset menu to default configuration?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
 ru.itsyn.jmix.menu_editor.screen.menu/copy=Copy
+ru.itsyn.jmix.menu_editor.screen.menu/apply=Apply
