--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -83,3 +83,4 @@ ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Сбросить
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Сбросить меню в конфигурацию по умолчанию?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Циклическая зависимость
 ru.itsyn.jmix.menu_editor.screen.menu/copy=Копировать
+ru.itsyn.jmix.menu_editor.screen.menu/apply=Применить
