#1 - MenuEntity - add roleCode property

--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -40,6 +40,7 @@ ru.itsyn.jmix.menu_editor.entity/MenuEntity.code=Code
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.priority=Priority
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.description=Description
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.config=Config
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.roleCode=Role code
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdBy=Created by
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdDate=Created date
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedBy=Last modified by
