--- a/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -40,6 +40,7 @@ ru.itsyn.jmix.menu_editor.entity/MenuEntity.code=Код
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.priority=Приоритет
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.description=Описание
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.config=Конфигурация
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.roleCode=Код роли
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdBy=Создано пользователем
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.createdDate=Дата создания
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedBy=Изменено пользователем
