#1 - migrate to jmix-1.1.1

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -2,6 +2,8 @@ localeDisplayName.en=English
 
 ru.itsyn.jmix.menu_editor/menu.addon=jmix-menu-editor
 
+menu-config.menu_MenuEntity.browse=Main menus
+
 ru.itsyn.jmix.menu_editor.entity/MenuEntity=Menu
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.version=Version
@@ -18,7 +20,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedDate=Last modified date
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedBy=Deleted by
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedDate=Deleted date
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.caption=Main menus
-ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.menu=Main menus
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityEditor.caption=Menu editor
 
 ru.itsyn.jmix.menu_editor.entity/MenuItemType.MENU=Menu
