--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -2,6 +2,8 @@ localeDisplayName.ru=Русский
 
 ru.itsyn.jmix.menu_editor/menu.addon=jmix-menu-editor
 
+menu-config.menu_MenuEntity.browse=Главное меню
+
 ru.itsyn.jmix.menu_editor.entity/MenuEntity=Меню
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.version=Версия
@@ -18,7 +20,6 @@ ru.itsyn.jmix.menu_editor.entity/MenuEntity.lastModifiedDate=Дата измен
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedBy=Удалено пользователем
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.deletedDate=Дата удаления
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.caption=Главное меню
-ru.itsyn.jmix.menu_editor.screen.menu/menuEntityBrowser.menu=Главное меню
 ru.itsyn.jmix.menu_editor.screen.menu/menuEntityEditor.caption=Редактор меню
 
 ru.itsyn.jmix.menu_editor.entity/MenuItemType.MENU=Меню
