#1 - MenuEntityEditor - add config field

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -51,6 +51,8 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
 ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Menu item editor
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
+ru.itsyn.jmix.menu_editor.screen.menu/itemsTab.caption=Items
+ru.itsyn.jmix.menu_editor.screen.menu/configTab.caption=XML
 ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Reset
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Reset menu to default configuration?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
