--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -51,6 +51,8 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Свойства
 ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Редактор пункта меню
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
+ru.itsyn.jmix.menu_editor.screen.menu/itemsTab.caption=Пункты
+ru.itsyn.jmix.menu_editor.screen.menu/configTab.caption=XML
 ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Сбросить
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Сбросить меню в конфигурацию по умолчанию?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Циклическая зависимость
