#1 - MenuItemEntity - add extra attributes

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -48,6 +48,11 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.expanded=Expanded
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.children=Children
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Caption
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Properties
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.createdBy=Created by
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.createdDate=Created date
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.lastModifiedBy=Last modified by
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.lastModifiedDate=Last modified date
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.comment=Comment
 ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Menu item editor
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
