--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -48,6 +48,11 @@ ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.expanded=Расширенный
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.children=Вложенные пункты
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.caption=Заголовок
 ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.contentXml=Свойства
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.createdBy=Создано пользователем
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.createdDate=Дата создания
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.lastModifiedBy=Изменено пользователем
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.lastModifiedDate=Дата изменения
+ru.itsyn.jmix.menu_editor.entity/MenuItemEntity.comment=Комментарий
 ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Редактор пункта меню
 
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
