#1 - fix MenuEntity.name caption

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -7,7 +7,7 @@ menu-config.menu_MenuEntity.browse=Главное меню
 ru.itsyn.jmix.menu_editor.entity/MenuEntity=Меню
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.version=Версия
-ru.itsyn.jmix.menu_editor.entity/MenuEntity.name=Name
+ru.itsyn.jmix.menu_editor.entity/MenuEntity.name=Название
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.code=Код
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.priority=Приоритет
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.description=Описание
