#6 - migrate to jmix-2.x

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -2,7 +2,7 @@ localeDisplayName.en=English
 
 ru.itsyn.jmix.menu_editor/menu.addon=jmix-menu-editor
 
-menu-config.menu_MenuEntity.browse=Main menus
+menu-config.menu_MenuEntity.list=Main menus
 
 ru.itsyn.jmix.menu_editor.entity/MenuEntity=Menu
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
