--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -2,7 +2,7 @@ localeDisplayName.ru=Русский
 
 ru.itsyn.jmix.menu_editor/menu.addon=jmix-menu-editor
 
-menu-config.menu_MenuEntity.browse=Главное меню
+menu-config.menu_MenuEntity.list=Главное меню
 
 ru.itsyn.jmix.menu_editor.entity/MenuEntity=Меню
 ru.itsyn.jmix.menu_editor.entity/MenuEntity.id=ID
