#6 - migrate to jmix-2.x

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_en.properties
@@ -58,6 +58,7 @@ ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Menu item edit
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Main menu
 ru.itsyn.jmix.menu_editor.screen.menu/itemsTab.caption=Items
 ru.itsyn.jmix.menu_editor.screen.menu/configTab.caption=XML
+ru.itsyn.jmix.menu_editor.screen.menu/filter=Filter
 ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Reset
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Reset menu to default configuration?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Cyclic dependency
