--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/messages_ru.properties
@@ -58,6 +58,7 @@ ru.itsyn.jmix.menu_editor.screen.menu_item/menuItemEditor.caption=Редакто
 ru.itsyn.jmix.menu_editor.screen.menu_item/rootItemCaption=Главное меню
 ru.itsyn.jmix.menu_editor.screen.menu/itemsTab.caption=Пункты
 ru.itsyn.jmix.menu_editor.screen.menu/configTab.caption=XML
+ru.itsyn.jmix.menu_editor.screen.menu/filter=Фильтр
 ru.itsyn.jmix.menu_editor.screen.menu/resetMenu=Сбросить
 ru.itsyn.jmix.menu_editor.screen.menu/resetConfirmation=Сбросить меню в конфигурацию по умолчанию?
 ru.itsyn.jmix.menu_editor.screen.menu/cyclicDependencyWarning=Циклическая зависимость
